Added universal echo
