# api/v1/echo/routes.go
@@ -1,0 +1,7 @@
+package echo
+
+import "github.com/gorilla/mux"
+
+func RegisterRoutes(router *mux.Router) {
+	router.HandleFunc("/", UniversalEcho).Methods("GET", "PUT", "PATCH", "POST", "DELETE")
+}
