# docs/swagger.json
@@ -244,6 +244,92 @@
                 }
             }
         },
+        "/api/v1/echo": {
+            "get": {
+                "description": "Echo the request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "echo"
+                ],
+                "summary": "Echo the request",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/echo.EchoResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Echo the request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "echo"
+                ],
+                "summary": "Echo the request",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/echo.EchoResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Echo the request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "echo"
+                ],
+                "summary": "Echo the request",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/echo.EchoResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Echo the request",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "echo"
+                ],
+                "summary": "Echo the request",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/echo.EchoResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/files/checkEqual": {
             "post": {
                 "description": "Check if two files are equal",
@@ -430,7 +516,7 @@
         },
         "/api/v1/files/list": {
             "post": {
-                "description": "List Files",
+                "description": "List files in a given directory with a filter",
                 "consumes": [
                     "application/json"
                 ],
@@ -440,7 +526,7 @@
                 "tags": [
                     "files"
                 ],
-                "summary": "List Files",
+                "summary": "Filtered List Files",
                 "parameters": [
                     {
                         "description": "Remote Configuration",
@@ -448,7 +534,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/files.ListFilesRequest"
+                            "$ref": "#/definitions/files.FilteredListFilesRequest"
                         }
                     }
                 ],
@@ -1011,6 +1097,35 @@
                 }
             }
         },
+        "echo.EchoResponse": {
+            "type": "object",
+            "properties": {
+                "formData": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "headers": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "queryParams": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "requestBody": {
+                    "type": "string"
+                },
+                "requestType": {
+                    "type": "string"
+                }
+            }
+        },
         "files.CheckEqualRequest": {
             "type": "object",
             "properties": {
@@ -1079,6 +1194,44 @@
                 }
             }
         },
+        "files.FilterType": {
+            "type": "string",
+            "enum": [
+                "prefix",
+                "suffix",
+                "regex",
+                "wildcard"
+            ],
+            "x-enum-varnames": [
+                "FilterTypePrefix",
+                "FilterTypeSuffix",
+                "FilterTypeRegex",
+                "FilterTypeWildcard"
+            ]
+        },
+        "files.FilteredListFilesRequest": {
+            "type": "object",
+            "properties": {
+                "filter": {
+                    "type": "string"
+                },
+                "filterType": {
+                    "$ref": "#/definitions/files.FilterType"
+                },
+                "options": {
+                    "$ref": "#/definitions/operations.ListJSONOpt"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "recurse": {
+                    "type": "boolean"
+                },
+                "remote": {
+                    "$ref": "#/definitions/files.RemoteConfiguration"
+                }
+            }
+        },
         "files.ListFilesRequest": {
             "type": "object",
             "properties": {
@@ -1104,6 +1257,9 @@
                     "items": {
                         "$ref": "#/definitions/operations.ListJSONItem"
                     }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
